# simplehttpserver

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  index.html
src/: CMakeLists.txt  main.cpp
